# coding_projects

./: .gitignore  CMakeLists.txt  README.md
Calculator/: Calculator.cpp
Fun With Math/: bellNumber.cpp  catalanNumber.cpp  collatzConjecture.cpp  funWithMathsIncludes.h  harmonicNumber.cpp  harmonicNumber.h  main.cpp  primeNumber.cpp  triangularNumber.cpp  triangularNumber.h
Fun With Numbers/: main.cpp  mersennePrimeCheck.cpp  mersennePrimeCheck.h  palindromeCheck.cpp  perfectNumberCheck.h  primeNumberCheck.cpp
ImGui Template/: main.cpp
Number Guessing Game/: Number Guessing Game.cpp
basic_concepts/Calculator/: CMakeLists.txt
basic_concepts/Calculator/src/: main.cpp  main.h
basic_concepts/Hello CMake World/: CMakeLists.txt
basic_concepts/Hello CMake World/src/: main.cpp
basic_concepts/Math Functions/: CMakeLists.txt
basic_concepts/Math Functions/include/: bellNumber.h  catalanNumber.h  collatzConjecture.h  factorial.h  fibonacci.h  funWithMathsIncludes.h  main.h  primeNumber.h
basic_concepts/Math Functions/src/: factorial.cpp  fibonacci.cpp  main.cpp
basic_concepts/Number Checker/: CMakeLists.txt
basic_concepts/Number Checker/include/: funWithNumbersIncludes.h  main.h  palindromeCheck.h  primeNumberCheck.h
basic_concepts/Number Checker/src/: main.cpp  perfectNumberCheck.cpp
basic_concepts/Number Guessing Game/: CMakeLists.txt
basic_concepts/Number Guessing Game/include/: main.h
basic_concepts/Number Guessing Game/src/: main.cpp
basic_concepts/Temperature Converter/: CMakeLists.txt
basic_concepts/Temperature Converter/include/: main.h  temperature.h
basic_concepts/Temperature Converter/src/: main.cpp
helpers/: cmake_template.txt  create_new_project.cmd
